# CMakeProjectGenerator

./: CMakeProjectGenerator.py  README.md  add_to_path.py  cppinit  qtinit
aaa/: CMakeLists.txt  main.cpp
aaa/include/: aaa.h
aaa/logger/: CMakeLists.txt  logger.hpp
aaa/src/: aaa.cpp
aaa/tests/: CMakeLists.txt  aaa_test.cpp
